--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
 #titulo{
     color: brown;
     text-align: center;
-    font-size: 20px;
+    font-size: 40px;
 }
 
 .texto {
-    color: blue;
+    color: brown;
 text-align: center;
 font-size: 30px;
 }
