--- a/style.css
+++ b/style.css
@@ -4,8 +4,14 @@
     font-size: 40px;
 }
 
-.texto {
+.texto 1 {
     color: brown;
+text-align: center;
+font-size: 30px;
+}
+
+.texto 2 {
+    color: :read-only;
 text-align: center;
 font-size: 30px;
 }
