--- a/style.css
+++ b/style.css
@@ -4,14 +4,8 @@
     font-size: 40px;
 }
 
-.texto 1 {
+.texto {
     color: brown;
-text-align: center;
-font-size: 30px;
-}
-
-.texto 2 {
-    color: :read-only;
 text-align: center;
 font-size: 30px;
 }
