--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@
 
 .texto1 {
     color: brown;
+    background-color: azure;
 text-align: center;
 font-size: 30px;
 }
@@ -13,6 +14,7 @@ font-size: 30px;
 .texto2 {
 
     color: rgb(95, 65, 26);
+    background-color: azure;
     text-align: center;
 font-size: 30px;
 }
