--- a/style.css
+++ b/style.css
@@ -6,14 +6,14 @@
 
 .texto1 {
     color: brown;
-    background-color: azure;
+    background-color: rgb(223, 116, 54);
 text-align: center;
 font-size: 30px;
 }
 
 .texto2 {
 
-    color: rgb(95, 65, 26);
+    color: rgb(223, 116, 54);
     background-color: azure;
     text-align: center;
 font-size: 30px;
