--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 
 .texto1 {
     color: brown;
-    background-color: rgb(223, 107, 40);
+    background-color:beige;
 text-align: center;
 font-size: 30px;
 }
@@ -14,7 +14,7 @@ font-size: 30px;
 .texto2 {
 
     color: rgb(95, 65, 26);
-    background-color: rgb(151, 57, 19);
+    background-color: azure;
     text-align: center;
 font-size: 30px;
 }
