--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ font-size: 30px;
 .texto2 {
 
     color: rgb(95, 65, 26);
-    background-color:beige
+    background-color:beige;
     text-align: center;
 font-size: 30px;
 }
